--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <!--<script src="script.js"></script> -->
+    <script src="js.js"></script>
     <div><p>Hello</p></div>
 </body>
 </html>
