--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!--<script src="script.js"></script> -->
-    <script src="js.js"></script>
+    <script src="cikly.js"></script>
     <div><p>Hello</p></div>
 </body>
 </html>
