--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   <!--  <script src="script.js"></script> -->
-    <script src="function.js"></script>
+    <script src="script.js"></script>
+   <!--  <script src="function.js"></script> -->
 
     <!-- <script src="cikly.js"></script> -->
     <div><p>Hello</p></div>
