--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <!-- <script src="js.js"></script> -->
    <!--  <script src="function.js"></script> -->
 
     <!-- <script src="cikly.js"></script> -->
